* New:   - Added new controller function [getPhotoCaptions] to photos controller   - Added new end-point /api/photos/{photoId}/captions to get all captions for the given photo   - Added new controller function [getAllCaptionsVotes] to captions controller   - Added new end-point /api/captions/{captionId}/votes to get all votes for the given caption
* Updated:
  - Updated documentation for the new end-points

* Deleted:
