# docs/ApiDocs.yaml
@@ -688,7 +688,7 @@ paths:
             type: integer
       responses:
         '200':
-          description: 'ok'
+          description: ok
           content:
             application/json:
               examples:
@@ -702,6 +702,97 @@ paths:
           description: Default error sample response
       tags:
         - Votes
+  /api/photos/{id}/captions:
+    summary: get photo's captions
+    get:
+      summary: Get all photo's captions
+      description: Get the captions for the given id
+      operationId: get_photos_captions
+      parameters:
+        - name: id
+          in: path
+          description: ID of the photo
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              examples:
+                Array of Captions:
+                  value: |-
+                    [
+                        {
+                            "id": 1,
+                            "caption": "Nemo sed itaque quidem et nam rerum aspernatur ut et.",
+                            "style": "style1",
+                            "photo_id": 1,
+                            "user_id": 9,
+                            "createdAt": null,
+                            "updatedAt": null,
+                            "PhotoId": 1
+                        }
+                    ]
+        default:
+          description: Default error sample response
+      tags:
+        - Photos
+  /api/captions/{captionId}/votes:
+    summary: Get all votes for a given caption
+    get:
+      summary: Get all votes for the given caption
+      description: ''
+      operationId: get_all_caption_votes
+      parameters:
+        - name: captionId
+          in: path
+          description: ID of the caption
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: 'OK'
+          content:
+            application/json:
+              examples:
+                Array of votes:
+                  value: |-
+                    [
+                        {
+                            "id": 7,
+                            "vote": 5,
+                            "caption_id": 2,
+                            "user_id": 4,
+                            "createdAt": null,
+                            "updatedAt": null,
+                            "CaptionId": 2
+                        },
+                        {
+                            "id": 8,
+                            "vote": 1,
+                            "caption_id": 2,
+                            "user_id": 8,
+                            "createdAt": null,
+                            "updatedAt": null,
+                            "CaptionId": 2
+                        },
+                        {
+                            "id": 9,
+                            "vote": 5,
+                            "caption_id": 2,
+                            "user_id": 9,
+                            "createdAt": null,
+                            "updatedAt": null,
+                            "CaptionId": 2
+                        }
+                    ]
+        default:
+          description: Default error sample response
+      tags:
+        - Captions
 components:
   schemas:
     Login:
