# routes/caption.js
@@ -5,7 +5,8 @@ const {
   getCaption,
   createCaption,
   updateCaption,
-  deleteCaption
+  deleteCaption,
+  getAllCaptionsVotes
 } = require('../controllers/caption');
 
 const { upload } = require('../utils/handleStorage');
@@ -17,10 +18,18 @@ const {
   UpdateCaptionValidator
 } = require('../validators/caption');
 
+/**
+ * Restful routes
+ */
 router.get('/', validateToken, getCaptions);
 router.get('/:id', validateToken, requestaptionValidator, getCaption);
 router.post('/', validateToken, upload.single('photo'), createCaptionValidator, createCaption);
 router.put('/:id', validateToken, requestaptionValidator, UpdateCaptionValidator, updateCaption);
-router.delete('/:id', validateToken, requestaptionValidator, deleteCaption);
+router.delete('/:id', requestaptionValidator, deleteCaption);
+
+/**
+ * Other routes
+ */
+router.get('/:id/votes', requestaptionValidator, getAllCaptionsVotes);
 
 module.exports = router;
