# routes/photo.js
@@ -5,7 +5,8 @@ const {
   getPhoto,
   createPhoto,
   updatePhoto,
-  deletePhoto
+  deletePhoto,
+  getPhotoCaptions
 } = require('../controllers/photo');
 
 const { upload } = require('../utils/handleStorage');
@@ -17,10 +18,18 @@ const {
 
 const { validateToken } = require('../utils/handleToken');
 
+/**
+ * RestFul routes
+ */
 router.get('/', getPhotos);
 router.get('/:id', requestPhotoValidator, getPhoto);
 router.post('/', validateToken, upload.single('photo'), createPhotoValidator, createPhoto);
 router.put('/:id', validateToken, requestPhotoValidator, createPhotoValidator, updatePhoto);
 router.delete('/:id', validateToken, requestPhotoValidator, deletePhoto);
+
+/**
+ * Other routes
+ */
+router.get('/:id/captions', requestPhotoValidator, getPhotoCaptions);
 
 module.exports = router;
